prom-grafana/prom-deploy-new.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promtail
  namespace: monitoring
  labels:
    app: promtail
    group: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promtail
      group: grafana
  template:
    metadata:
      labels:
        app: promtail
        group: grafana
    spec:
      containers:
        - name: promtail
          image: grafana/promtail:make-images-static-26a87c9
          imagePullPolicy: Always
          args: ["-config.file=/etc/promtail/promtail-config.yaml"]
          volumeMounts:
          - name: promtail-config
            mountPath: /etc/promtail/
          - name: varlog
            mountPath: /var/log
          - name: varlibdockercontainers
            mountPath: /var/lib/docker/containers
            readOnly: true
          - name: javalog
            mountPath: /var/log/java
            readOnly: true
          - name: phplog
            mountPath: /var/log/php/apache
            readOnly: true
      volumes:
        - name: promtail-config
          configMap:
            name: promtail-config
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: javalog
          hostPath:
            path: /var/log/java
        - name: phplog
          hostPath:
            path: /var/log/php/apache
